Fixed new shipment style to align other pages

--- a/boxinator-frontend/src/NewShipment/NewShipment.css
+++ b/boxinator-frontend/src/NewShipment/NewShipment.css
@@ -1,3 +1,10 @@
 .new-shipment {
-    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.new-shipment h2 {
+    margin-bottom: 30px;
 }
